The name of the downloaded file is changed on hover inside the downloads panel if the file has a long name
Categories
(Core :: Layout, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox-esr115 | --- | wontfix |
firefox114 | --- | wontfix |
firefox115 | --- | wontfix |
firefox116 | --- | verified |
People
(Reporter: atrif, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
Found in
- 115.0b5
Affected versions
- 116.0a1 (2023-06-13)
- 115.0b5
- 114.0.1
Tested platforms
- Affected platforms: Windows10 x64, Ubuntu 20.04, macOS 13 ARM
- Unaffected platforms: none
Steps to reproduce
- Download a file with a long name (e.g https://www.apkmirror.com/apk/google-inc/gmail/gmail-2022-06-12-459360300-release-release/gmail-2022-06-12-459360300-release-2-android-apk-download/)
- Observe the download panel while the download is running.
- Open the download panel and hover over the downloaded file.
Expected result
- Steps 2&3 - The name is displayed alongside the file extension name.
Actual result
- Step2: The name is cropped when the download is in progress
- Step 3: The name is not cropped when the download panel is opened but then the name changes after hovering the file.
Regression range
- Last good revision: 770fc56ae163bef5eeb2c84d467b736e540e8b4e
First bad revision: 47e92b0d5aec52e03a648cfec91e0b38ea240e4e
4:55.12 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=770fc56ae163bef5eeb2c84d467b736e540e8b4e&tochange=47e92b0d5aec52e03a648cfec91e0b38ea240e4e
Possible regressor: bug 1824667.
Additional notes
- Attached a screen recording.
Comment 1•2 years ago
|
||
:emilio, since you are the author of the regressor, bug 1824667, could you take a look?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 2•2 years ago
|
||
Otherwise we might incorrectly end up with the un-cropped value.
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
bugherder |
Comment 5•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox115
towontfix
.
For more information, please visit BugBot documentation.
Updated•2 years ago
|
Reporter | ||
Comment 7•2 years ago
|
||
Verified fixed with Firefox 116.0a1 (2023-06-29) on Windows 10x64, macOS 12 and Ubuntu 22 using STR from comment 0. The name is displayed alongside the file extension name when the file is downloaded and no longer changes when hovered after the download panel is opened.
Comment 8•2 years ago
|
||
Set release status flags based on info from the regressing bug 1824667
Updated•2 years ago
|
Description
•