Bug 1838407 - Make sure MiddleCroppingBlockFrame::GetPrefISize keeps constant cropped status. r=jfkthame

Otherwise we might incorrectly end up with the un-cropped value.

Differential Revision: https://phabricator.services.mozilla.com/D180934