layout/generic/MiddleCroppingBlockFrame.h
@@ -51,11 +51,13 @@ class MiddleCroppingBlockFrame : public nsBlockFrame,
   /**
    * Updates the displayed value by using aValue.
    */
-  void UpdateDisplayedValue(const nsAString& aValue, bool aNotify);
+  void UpdateDisplayedValue(const nsAString& aValue, bool aIsCropped,
+                            bool aNotify);
   void DestroyFrom(nsIFrame* aDestructRoot,
                    PostDestroyData& aPostDestroyData) override;
 
   RefPtr<dom::Text> mTextNode;
+  bool mCropped = false;
 };
 
 }  // namespace mozilla
